--- a/09-example-adminlte-hook/my-admin-console/public/index.html
+++ b/09-example-adminlte-hook/my-admin-console/public/index.html
@@ -47,6 +47,7 @@
 
 <body class="hold-transition sidebar-mini layout-fixed">
   <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div>%REACT_APP_WEBSITE_NAME%</div>
   <div id="root"></div>
   <!--
       This HTML file is a template.
